# qml_helxa_test

./: Ball.qml  CMakeLists.txt  EventBus.qml  Fenomode.qml  Header.qml  Main.qml  Mychart.qml  Mylabel.qml  Rootview.qml  Sno.qml  Snodataview.qml  Status.qml  Toast.qml  ToastManager.qml  common.js  fileio.cpp  fileio.h  images.qrc  main.cpp
config/: pc_print.html
src/: main.cpp  model.h  qmlemsocket.cpp  qmlemsocket.h  singletonmanager.cpp  singletonmanager.h  utils.cpp  utils.h
view/: AnalysisView.qml  DialogResultView.qml  ElevationItem.qml  MyEdit.qml  MyLabel.qml  MySlide.qml  NewFenoMode.qml  PreviewWindow.qml  Smile.qml  StausBarView.qml
